@@ -145,7 +145,7 @@ msgen_SOURCES = msgen.c
 msgexec_SOURCES = msgexec.c
 msgfilter_SOURCES = msgfilter.c
 msggrep_SOURCES = msggrep.c
-msginit_SOURCES = msginit.c ../../gettext-runtime/intl/localealias.c
+msginit_SOURCES = msginit.c plural-count.c ../../gettext-runtime/intl/localealias.c
 msguniq_SOURCES = msguniq.c
 hostname_SOURCES = hostname.c
 urlget_SOURCES = urlget.c
