@@ -1,3 +1,11 @@
+2004-09-11  Bruno Haible  <bruno@clisp.org>
+
+	* msginit-1: New file.
+	* msgmerge-17: New file.
+	* Makefile.am (TESTS): Add msginit-1, msgmerge-17.
+	(TESTS_ENVIRONMENT): Also define MSGINIT.
+	Reported by Jens A. Tkotz <jens@peino.de>.
+
 2004-09-08  Bruno Haible  <bruno@clisp.org>
 
 	Make lang-java work again on platforms with Java version < 1.4.
